UPDATED | styles and scripts fixes

--- a/wp-content/themes/ashion/assets/styles/main.scss
+++ b/wp-content/themes/ashion/assets/styles/main.scss
@@ -7,7 +7,7 @@
 @import "~font-awesome/css/font-awesome.min.css";
 @import "~elegant-icons/style.css";
 @import "~magnific-popup/dist/magnific-popup.css";
-@import "~owl.carousel/src/scss/owl.carousel";
+@import "~owl.carousel/dist/assets/owl.carousel.min.css";
 @import "~slicknav/scss/slicknav";
 
 //base
