--- a/wp-content/themes/ashion/assets/styles/pages/_blog.scss
+++ b/wp-content/themes/ashion/assets/styles/pages/_blog.scss
@@ -8,6 +8,16 @@
 
 .blog__item {
   margin-bottom: 35px;
+  width: 100%;
+  padding: 15px;
+
+  @media screen and (min-width: 768px) {
+    width: 50%;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 33.33%;
+  }
 }
 
 .blog__item__pic {
