FIXED | replace classmame for blog's section

--- a/wp-content/themes/ashion/assets/styles/pages/_blog.scss
+++ b/wp-content/themes/ashion/assets/styles/pages/_blog.scss
@@ -1,7 +1,7 @@
 /* ---------------------
     Blog
 ----------------------- */
-.blog {
+.blog-section {
   padding-top: 70px;
   padding-bottom: 80px;
 }
