UPDATED | Add Filters By Tacsonomy on Team Archive Page

--- a/wp-content/themes/ashion/assets/styles/main.scss
+++ b/wp-content/themes/ashion/assets/styles/main.scss
@@ -23,6 +23,7 @@
 @import "pages/shop";
 @import "pages/shop-cart";
 @import "pages/product";
+@import "pages/team";
 
 //blocks
 @import "blocks/header";
