ADDED | Comments on Single Page

--- a/wp-content/themes/ashion/assets/styles/main.scss
+++ b/wp-content/themes/ashion/assets/styles/main.scss
@@ -34,6 +34,7 @@
 @import "components/breadcrumb";
 @import "components/product-details";
 @import "components/blog-details";
+@import "components/comments";
 
 //responsive
 @import "base/responsive";
