--- a/wp-content/themes/ashion/assets/styles/blocks/_footer.scss
+++ b/wp-content/themes/ashion/assets/styles/blocks/_footer.scss
@@ -66,7 +66,7 @@
     position: relative;
     margin-bottom: 30px;
 
-    input {
+    input:not([type="submit"]) {
       height: 52px;
       width: 100%;
       border: 1px solid #e1e1e1;
@@ -84,6 +84,16 @@
       position: absolute;
       right: 4px;
       top: 4px;
+    }
+
+    .wpcf7-submit {
+      position: absolute;
+      right: 4px;
+      top: 4px;
+    }
+
+    .wpcf7-submit ~ .ajax-loader {
+      display: none;
     }
   }
 }
