FIXED | small fixes

--- a/wp-content/themes/ashion/assets/styles/main.scss
+++ b/wp-content/themes/ashion/assets/styles/main.scss
@@ -35,6 +35,7 @@
 @import "components/product-details";
 @import "components/blog-details";
 @import "components/comments";
+@import "components/instagram-widget";
 
 //responsive
 @import "base/responsive";
