ADDED | COVID page

--- a/wp-content/themes/ashion/assets/styles/main.scss
+++ b/wp-content/themes/ashion/assets/styles/main.scss
@@ -24,6 +24,7 @@
 @import "pages/shop-cart";
 @import "pages/product";
 @import "pages/team";
+@import "pages/covid";
 
 //blocks
 @import "blocks/header";
